variables.RunHalf.scala.code
var baggles : Int = 0
var orangeCells : Int = 0
while (2 * baggles != orangeCells + 1) {
  forward()
  if (isOverBaggel()) {
    baggles = baggles +1
  }
  if (Color.orange){
    orangeCells = OrangeCells +1
  }
}